Fix yaml + routes issues/watching issues/mine
